@@ -510,8 +510,10 @@ class TestIssues:
 
     def test_issue_242(self):
         from ruamel.yaml.comments import CommentedMap
+
         d0 = CommentedMap([('a', 'b')])
         assert d0['a'] == 'b'
+
 
 #    @pytest.mark.xfail(strict=True, reason='bla bla', raises=AssertionError)
 #    def test_issue_xxx(self):
