@@ -1,3 +1,11 @@
+[0, 15, 71]: 2018-09-26
+  - fix regression where handcrafted CommentedMaps could not be initiated (reported by 
+    `Dan Helfman <https://bitbucket.org/dhelfman/>`__)
+  - fix regression with non-root literal scalars that needed indent indicator
+    (reported by `Clark Breyman <https://bitbucket.org/clarkbreyman/>`__)
+  - tag:yaml.org,2002:python/object/apply now also uses __qualname__ on PY3
+    (reported by `Douglas RAILLARD <https://bitbucket.org/DouglasRaillard/>`__)
+
 [0, 15, 70]: 2018-09-21
   - reverted CommentedMap and CommentedSeq to subclass ordereddict resp. list,
     reimplemented merge maps so that both ``dict(**commented_map_instance)`` and JSON
